@@ -212,7 +212,9 @@ digits_in_number(time_t duration)
 {
     uint32_t period = (uint32_t) duration;
     size_t count = 0;
-
+    if (!period) {
+        return 1;
+    }
     while (period > 0) {
         count++;
         period /= 10;
@@ -230,7 +232,7 @@ duration2string(duration_type* duration)
 {
     char* str = NULL, *num = NULL;
     size_t count = 2;
-    int T = 0;
+    int T = 0, D = 0;
 
     if (!duration) {
         return NULL;
@@ -238,15 +240,19 @@ duration2string(duration_type* duration)
 
     if (duration->years > 0) {
         count = count + 1 + digits_in_number(duration->years);
+        D = 1;
     }
     if (duration->months > 0) {
         count = count + 1 + digits_in_number(duration->months);
+        D = 1;
     }
     if (duration->weeks > 0) {
         count = count + 1 + digits_in_number(duration->weeks);
+        D = 1;
     }
     if (duration->days > 0) {
         count = count + 1 + digits_in_number(duration->days);
+        D = 1;
     }
     if (duration->hours > 0) {
         count = count + 1 + digits_in_number(duration->hours);
@@ -260,7 +266,7 @@ duration2string(duration_type* duration)
         count = count + 1 + digits_in_number(duration->seconds);
         T = 1;
     }
-    if (T) {
+    if (T || !D) {
         count++;
     }
 
@@ -296,7 +302,7 @@ duration2string(duration_type* duration)
         str = strncat(str, num, count+2);
         free((void*) num);
     }
-    if (T) {
+    if (T || !D) {
         str = strncat(str, "T", 1);
     }
     if (duration->hours > 0) {
@@ -313,7 +319,8 @@ duration2string(duration_type* duration)
         str = strncat(str, num, count+2);
         free((void*) num);
     }
-    if (duration->seconds > 0) {
+    if (duration->seconds > 0 ||
+        (!D && !duration->hours && !duration->minutes)) {
         count = digits_in_number(duration->seconds);
         num = (char*) calloc(count+2, sizeof(char));
         snprintf(num, count+2, "%uS", (uint32_t) duration->seconds);
