@@ -10,6 +10,9 @@ OpenDNSSEC 1.3.16rc1
 * OPENDNSSEC-460: ods-ksmutil: Add an option to the 'ods-ksmutil key ds-seen'
   command so the user can choose not to notify the enforcer.
 
+Bugfixes:
+* OPENDNSSEC-462: Signer Engine: Duration PT0S is not printed correctly.
+
 
 OpenDNSSEC 1.3.15 - 2013-09-19
 
